# Hadar2255

./: .env.example  .gitignore  Dockerfile  README.md  app.js  docker-compose.yml  garmin_gemini.ipynb  index.html  package.json  pyproject.toml  requirements.txt  run.py  setup_auth.py  setup_auth_web.py  style.css  windows_auth.py
deploy/: DEPLOY.md  RAILWAY.md  ecosystem.config.cjs  install.sh
garmin_coach/: __init__.py  claude_coach.py  data_analyzer.py  garmin_client.py  main.py  models.py  running_analyzer.py
garmin_mcp/: __init__.py  __main__.py  activity_management.py  auth_cli.py  devices.py  health_wellness.py  token_utils.py  training.py  user_profile.py  workout_builders.py  workouts.py
memory-app/: README.md
memory-app/app/: .gitignore  app.json
memory-app/app/app/: index.tsx
memory-app/app/app/(tabs)/: home.tsx
memory-app/app/src/data/: lessons.ts
memory-app/app/src/i18n/: en.json  he.json
memory-app/docs/: memory-methods.md
memory-app/mockups/: index.html
memory-app/mockups/assets/css/: components.css  design-tokens.css  layout.css
memory-app/mockups/assets/locales/: en.json  he.json
memory-app/mockups/screens/: 01-splash.html  02-onboarding.html  05-home.html  06-lesson-intro.html  07-lesson-teach.html  10-quiz-recall.html  11-lesson-complete.html  12-profile.html
src/: ai.js  bot.js  crypto.js  db.js  formatter.js  index.js
