[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-mcp"
version = "0.1.0"
description = "MCP server to access Garmin Connect fitness data from Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "garminconnect>=0.3.0",
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
garmin-mcp = "garmin_mcp:main"
garmin-mcp-auth = "garmin_mcp.auth_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["garmin_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
